# smartfunnel

./: .gitignore  app.py  creatorOutput.md  crew.py  main.py  prompting_rag_task_output.txt  pyproject.toml  smartfunnel  smartfunnel.pub  sqlite.db
.devcontainer/: devcontainer.json
.streamlit/: config.toml
config/: tasks.yaml
crewai-env/: pyvenv.cfg
lead-gen/: Refined2.py  RefinedLeadGen.py  lead-gen2.py  streamlit_leadgen.py  testing.py
smartfunnel/: asynctesting.py  config.json  createasyncsimple.py  creatorOutput.md  debugsimpler.py  debugtesting.py  demo.py  instagram_scaper.py  instagram_session  outputInstagram.json  prompting_rag_task_output.txt  pyproject_DEFAULT.toml  report.md  vladzieg_instagram_session
smartfunnel/chroma_db/: chroma.sqlite3
smartfunnel/db/: chroma.sqlite3
smartfunnel/instagram_sessions/: vladzieg_MacBook-Pro-3.local_session
smartfunnel/smartfunnel_env/: pyvenv.cfg
smartfunnel/∕var∕folders∕sg∕9tmmm5dx4jn0p7wy57xq_pq80000gn∕T∕tmpkz35o3vz/: 2024-04-25_16-00-34_UTC.txt
src/: resetting.py
src/.streamlit/: secrets.toml
src/smartfunnel/: Replay.py  app.py  app2.py  app2_old.py  app_instagram.py  app_restart.py  crew.py  crew_instagram.py  crew_instagram_intermediary.py  crew_rag.py  crew_youtube.py  crew_youtube_simple.py  fetchtoadd.py  flow.py  integrated_crew.py  main.py  main_instagram.py  main_youtube.py  main_youtube_simple.py  pyproject.toml  (+1 more)
tools/: FetchInstagramPostsTool.py  FetchToAddInstagramAudioTool.py  PromptingRagTool.py  Promptingtesting.ipynb  testingintegrated.ipynb
venv_arm64/: pyvenv.cfg
(+32 files in other folders)
